--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-camera": "~12.1.2",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-radial-gradient": "^1.0.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "@expo/vector-icons": "^12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
