--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
-    "@expo/vector-icons": "^12.0.0"
+    "@expo/vector-icons": "^12.0.0",
+    "expo-av": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
