--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-av": "~10.2.0",
+    "expo-blur": "~11.0.0",
     "expo-camera": "~12.1.2",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
@@ -22,13 +26,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-element-timer": "^1.5.2",
+    "react-native-paper": "^4.12.1",
     "react-native-radial-gradient": "^1.0.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-native-web": "0.17.1",
-    "react-navigation-stack": "^2.10.4",
-    "@expo/vector-icons": "^12.0.0",
-    "expo-av": "~10.2.0"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
